kubernetes/microservices/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  namespace: microservices

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      automountServiceAccountToken: false
      containers:
        - name: frontend
          image: nginx:1.27.4-alpine

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: 250m
              memory: 256Mi

            limits:
              cpu: 500m
              memory: 512Mi
