kubernetes/microservices/frontend/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend
  namespace: microservices

spec:
  selector:
    app: frontend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

  type: ClusterIP
